# OSKAR

./: .clang-tidy  .cproject  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .project  .readthedocs.yaml  CMakeLists.txt  COPYING.md  ChangeLog.txt  INSTALL.md  LICENSE  LICENSE.md  README.md  copying.txt  install.txt  oskar.h  oskar_global.h  oskar_global.h.in  oskar_windows.h  readme.txt
apps/: CMakeLists.txt  device_info.cpp  imager_scalar.cpp  imager_scalar_f.cpp  oskar_MainWindow.cpp  oskar_MainWindow.h  oskar_OptionParser.h  oskar_RunThread.cpp  oskar_Settings.h  oskar_VisData.h  oskar_beam_pattern.cpp  oskar_binary_file_query_main.cpp  oskar_convert_cst_to_scalar.py  oskar_convert_ecef_to_enu_main.cpp  oskar_convert_geodetic_to_ecef_main.cpp  oskar_cuda_system_info_main.cpp  oskar_evaluate_pierce_points_main.cpp  oskar_filter_sky_model_clusters_main.cpp  oskar_fit_element_data_main.cpp  oskar_fits_image_to_sky_model_main.cpp  oskar_fits_to_sky_model_main.cpp  oskar_icrs_to_az_el.cpp  oskar_image_stats_main.cpp  oskar_image_summary_main.cpp  oskar_image_to_png_main.cpp  oskar_imager_dft.cu.h  oskar_imager_main.cpp  oskar_imager_scalar.cpp  oskar_imager_scalar_d.cpp  oskar_imager_scalar_f.cpp  oskar_imager_scalar_freq_scan.cpp  oskar_ionosphere_to_kml_main.cpp  oskar_load_stations.h  oskar_load_telescope.h  oskar_main.cpp  oskar_option_parser.h  oskar_rebin_sky_main.cpp  oskar_settings_get_main.cpp  oskar_settings_set_main.cpp  oskar_sim.cpp  (+33 more)
beamforming/: CMakeLists.txt  oskar_StationModel.h  oskar_bf_cuda_ant_sig_iso_2d.h  oskar_cuda_ant_sig_iso_2d.h
convert/: CMakeLists.txt  oskar_convert_apparent_ha_dec_to_enu_direction_cosines.h  oskar_convert_apparent_ha_dec_to_enu_directions.h  oskar_convert_apparent_ra_dec_to_az_el.h  oskar_convert_apparent_ra_dec_to_enu_directions.h  oskar_convert_brightness_to_jy.h  oskar_convert_cirs_relative_directions_to_enu_directions_cuda.h  oskar_convert_date_time_to_mjd.h  oskar_convert_ecef_to_baseline_uvw.h  oskar_convert_ecef_to_enu.h  oskar_convert_ecef_to_geodetic_spherical.h  oskar_convert_ecef_to_station_uvw.h  oskar_convert_ecef_to_station_uvw_cuda.h  oskar_convert_enu_direction_cosines_to_relative_direction_cosines_cuda.h  oskar_convert_enu_direction_cosines_to_theta_phi_inline.h  oskar_convert_enu_directions_to_az_el.h  oskar_convert_enu_directions_to_cirs_relative_directions_cuda.h  oskar_convert_enu_directions_to_relative_directions_cuda.h  oskar_convert_enu_directions_to_theta_phi.h  oskar_convert_enu_to_ecef.h  oskar_convert_enu_to_offset_ecef.h  oskar_convert_geodetic_spherical_to_ecef.h  oskar_convert_healpix_ring_to_theta_phi.h  oskar_convert_lon_lat_to_relative_directions_cuda.h  oskar_convert_lon_lat_to_xyz.h  oskar_convert_ludwig3_to_theta_phi_components.h  oskar_convert_ludwig3_to_theta_phi_components_cuda.h  oskar_convert_mjd_to_gmst.h  oskar_convert_mjd_ut1_to_era.h  oskar_convert_relative_direction_cosines_to_apparent_ra_dec.h  oskar_convert_relative_directions_to_enu_directions.h  oskar_convert_relative_directions_to_enu_directions_cuda.h  oskar_convert_theta_phi_to_enu_direction_cosines.h  oskar_convert_xyz_to_lon_lat.h  oskar_equation_of_equinoxes_fast.h  oskar_evaluate_diurnal_aberration.h  private_convert_ecef_to_station_uvw_inline.h  private_convert_enu_directions_to_cirs_relative_directions_inline.h  private_convert_ludwig3_to_theta_phi_components_inline.h  private_evaluate_cirs_observed_parameters.h  (+1 more)
correlate/: CMakeLists.txt  oskar_auto_correlate_cuda.h  oskar_auto_correlate_omp.h  oskar_auto_correlate_scalar_cuda.h  oskar_correlate.h  oskar_correlate_functions_inline.h  oskar_correlate_gaussian_cuda.h  oskar_correlate_gaussian_omp.h  oskar_correlate_gaussian_time_smearing_cuda.h  oskar_correlate_gaussian_time_smearing_omp.h  oskar_correlate_point_cuda.h  oskar_correlate_point_omp.h  oskar_correlate_point_time_smearing_cuda.h  oskar_correlate_point_time_smearing_new_cuda.h  oskar_correlate_point_time_smearing_omp.h  oskar_correlate_scalar_gaussian_cuda.h  oskar_correlate_scalar_gaussian_omp.h  oskar_correlate_scalar_gaussian_time_smearing_cuda.h  oskar_correlate_scalar_gaussian_time_smearing_omp.h  oskar_correlate_scalar_point_cuda.h  oskar_correlate_scalar_point_omp.h  oskar_correlate_scalar_point_time_smearing_cuda.h  oskar_correlate_scalar_point_time_smearing_omp.h  oskar_cross_correlate_gaussian_cuda.h  oskar_cross_correlate_gaussian_time_smearing_omp.h  oskar_cross_correlate_gaussian_time_smearing_scalar_cuda.h  oskar_cross_correlate_gaussian_time_smearing_scalar_omp.h  oskar_cross_correlate_point_cuda.h  oskar_cross_correlate_point_omp.h  oskar_cross_correlate_point_scalar_cuda.h  oskar_cross_correlate_point_scalar_omp.h  oskar_evaluate_auto_power_c.h  oskar_evaluate_average_cross_power_beam.h  oskar_evaluate_average_cross_power_beam_cuda.h  oskar_evaluate_average_cross_power_beam_omp.h  oskar_evaluate_average_scalar_cross_power_beam_cuda.h  oskar_evaluate_average_scalar_cross_power_beam_omp.h  oskar_evaluate_cross_power.h  oskar_evaluate_cross_power_omp.h  private_correlate_functions_inline.h
cuda/: CMakeLists.txt  CudaEclipse.h  CudaTypes.h  _antennaSignal2dHorizontalIsotropic.h  _antennaSignals.h  _beamPattern.h  _beamPattern2dHorizontalGeometric.h  _beamPattern2dHorizontalWeights.h  _beamPatternDirect.h  _beamPatternWeights.h  _equatorialToHorizontalGeneric.h  _generateWeights.h  _imager2dDft.h  _precompute2dHorizontalTrig.h  _roundRobin.h  _weights2dHorizontalGeometric.h  antennaSignal2dHorizontalIsotropic.h  antennaSignals.h  beamPattern.h  beamPattern2dHorizontalGeometric.h  beamPattern2dHorizontalWeights.h  beamPatternDirect.h  beamPatternWeights.h  beamformer2dHorizontalIsotropicGeometric.h  beamformerMatrixVector.h  imager2dDft.h  oskar_cuda.h  oskar_cuda_as2hi.h  oskar_cuda_bf2hig.h  oskar_cuda_bfmv.h  oskar_cuda_bp2hc.h  oskar_cuda_bp2hcgg.h  oskar_cuda_bp2hcggu.h  oskar_cuda_bp2hig.h  oskar_cuda_bp2higa.h  oskar_cuda_bp2higau.h  oskar_cuda_bp2higu.h  oskar_cuda_bp2hsg.h  oskar_cuda_bp2hsgu.h  oskar_cuda_bp2hssg.h  (+37 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  intro.dox  (+7 more)
(+5870 files in other folders)
